# fast_zero_curso

./: pyproject.toml
migrations/: env.py
migrations/versions/: 3e92926a3b26_exercicio_02_aula_04.py  3eeb82808560_create_todos_table.py  ef35c59fcd69_create_users_table.py
src/fast_zero/: app.py  security.py  settings.py
src/fast_zero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_security.py  test_users.py
